Update for Authentification

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,24 @@
 <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
+  <h1>Welcome to</h1>
   <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
+    <br>
+    <img width="400px" src="images/issuetracker_logo.png" alt="IssueTracker"><br>
+    <br>
+    Helping you to build better software.
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
 </div>
 
 <div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
+  <h4>Issue tracking made easy</h4>
   <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
+    Easy and efficient issue tracking!
   </p>
 
-  <h4>Angular</h4>
+  <h4>Built with modern technologies</h4>
   <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
+    Built with AngularJS, Bootstrap and Firebase!
   </p>
 
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+  <h4>Easy and fast user interface</h4>
+  <p>IssueTracker has a simple and fast user interface!</p>
 </div>
