Firebase Auth added

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -9,16 +9,16 @@
 </div>
 
 <div class="row marketing">
-  <h4>Issue tracking made easy</h4>
+  <h3><span class="glyphicon glyphicon-paperclip"></span> Issue tracking made easy</h3>
   <p>
     Easy and efficient issue tracking!
   </p>
 
-  <h4>Built with modern technologies</h4>
+  <h3><span class="glyphicon glyphicon-wrench"></span> Built with modern technologies</h3>
   <p>
     Built with AngularJS, Bootstrap and Firebase!
   </p>
 
-  <h4>Easy and fast user interface</h4>
+  <h3><span class="glyphicon glyphicon-eye-open"></span> Easy and fast user interface</h3>
   <p>IssueTracker has a simple and fast user interface!</p>
 </div>
